# SmashPro_BasebandFirmware

./: BuildVer.sh  CMakeLists.txt  Kconfig.projbuild  README.md  ananlog.c  ananlog.h  async.c  bluetooth.c  bluetooth.h  bt.cpp  bt_hid_manager.c  bt_hid_manager.h  conf.c  conf.h  flash.h  gene_input_report_format.txt  i2c.c  macro.h  main.c  ns_com.c  pwr.c  pwr.h  sdkconfig  sdkconfig.old  tcp.txt  tcp_com.c  tcp_com.h  uart.c  uart.h  version.txt  web_ota.c  wifi.c  wifi.h
main/: CMakeLists.txt  bt_hid_manager.c  bt_hid_manager.h  flash.c  flash.h  hardware.c  hardware.h  i2c.h  main.c  ns_com.c  ns_com.h  pwr.c  pwr.h  uart.c  uart.h  web_ota.h  wifi.c
main/html/www/: HttpOTA.html
